# Mimik_Suite

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.api  FRESH_SESSION_KICKOFF.md  HANDOFF.md  NEXT_SESSION.md  README.md  SESSION_LOG.md  docker-compose.coolify.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
api/: main.py
creative/: __init__.py  art_direction.py  assemble.py  generate.py  pipeline.py  prompting.py  style_profile.py
docker/: api-entrypoint.sh
docs/: AUDIT_3PERSONA_PROMPT.md  BRAND_KIT_ONBOARDING.md  BRAND_KIT_V2_SPEC.md  BUILD_STATUS.md  COMPLETENESS_ASSESSMENT.md  DECISIONS.md  DEPLOY.md  DESIGN_CRITIC_SPEC.md  DESIGN_IQ_UPGRADE.md  DESIGN_REFERENCES.md  DESIGN_RUBRIC.md  FRONTEND_ROADMAP.md  FRONTEND_WIRING_BACKLOG.md  IAM_DESIGN.md  MASTER_PLAN.md  NEXT_SESSION.md  NEXT_SESSION_G2G.md  NEXT_SESSION_PROMPTS.md  NIKAH_ENGINE_SPEC.md  PLAN.md  PLAN_COMMAND_CENTER_AND_CANVAS.md  PLAN_EDITOR_AND_COMMAND_CENTER.md  PRODUCT_PM_REPORT.md  PRODUCT_STATE_INVENTORY.md  RESEARCH.md  SCREENSHOTS.md  SECURITY_FINDINGS.md  STYLE_PROFILES.md  WHATSAPP_SETUP.md  brand-kit-prototype.html
migrations/: env.py
scripts/: browser_login.py  chatgpt_generate.py  chrome_debug.py  drive_oauth.py  leonardo_generate.py  leonardo_login.py  seed_profiles.py  verify_env.py  whatsapp_smoke.py
tests/: conftest.py  test_admin_accounts_patch.py  test_approvals.py  test_archive.py  test_art_direction.py  test_assemble.py  test_assets.py  test_at_risk.py  test_auth_supabase.py  test_billing.py  test_brand_font_resolution.py  test_brand_memory.py  (+70 more)
(+229 files in other folders)
