[project]
name = "mimik-suite"
version = "0.1.0"
description = "Mimik Suite — multi-tenant done-for-you creative-agency SaaS (product layer)."
requires-python = ">=3.12"
dependencies = [
    "mimik-contracts",
    "mimik-knowledge",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic-settings>=2.2",
    "pyjwt[crypto]>=2.8",  # crypto extra: ES256/RS256 verification of Supabase's asymmetric JWTs
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    "playwright>=1.61.0",
    "patchright>=1.61.2",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "ruff>=0.5",
]

[tool.uv.sources]
mimik-contracts = { path = "../mimik-contracts", editable = true }
mimik-knowledge = { path = "../mimik-knowledge", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "creative"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
